# OpenCV

./: CMakeLists.txt  README.md
ArUcoMarker/: CreateMarker.cpp
CameraRecord/: CMakeLists.txt  CameraRecord.cpp
